--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@algorandfoundation/algokit-utils": "^9.1.2",
     "@hookform/resolvers": "^5.2.1",
+    "@txnlab/use-wallet-react": "^4.3.1",
+    "algosdk": "^3.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -20,6 +23,8 @@
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
+    "notistack": "^3.0.2",
+    "radix-ui": "latest",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
@@ -29,8 +34,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.1",
-    "radix-ui": "latest"
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
