--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "algobuild": "algokit compile ts smart_contracts --output-source-map --out-dir artifacts && algokit generate client smart_contracts/artifacts --output {app_spec_dir}/{contract_name}Client.ts",
+    "deploy": "ts-node-dev --transpile-only --watch .env -r dotenv/config smart_contracts/index.ts",
+    "deploy:ci": "ts-node --transpile-only -r dotenv/config smart_contracts/index.ts",
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@algorandfoundation/algokit-utils": "^9.1.2",
+    "@algorandfoundation/algorand-typescript": "1.0.0-beta.72",
+    "@blockshake/defly-connect": "^1.2.1",
     "@hookform/resolvers": "^5.2.1",
     "@txnlab/use-wallet-react": "^4.3.1",
     "algosdk": "^3.4.0",
@@ -37,12 +43,18 @@
     "zod": "^4.1.1"
   },
   "devDependencies": {
+    "@algorandfoundation/algokit-client-generator": "^6.0.0",
+    "@algorandfoundation/algokit-utils-debug": "^1.0.4",
+    "@algorandfoundation/puya-ts": "1.0.0-beta.72",
     "@biomejs/biome": "2.2.0",
+    "@rollup/plugin-typescript": "^12.1.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.1",
     "tailwindcss": "^4",
+    "ts-node-dev": "^2.0.0",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
