Remove HelloWorld smart contract artifacts and client files
- Deleted HelloWorld.arc56.json, HelloWorld.clear.puya.map, HelloWorld.clear.teal, and HelloWorldClient.ts files.
- Added a new tsconfig.json for smart_contracts with specific compiler options.
- Updated the main tsconfig.json to target ES2022 and include additional libraries.
- Excluded the smart_contracts directory from the main tsconfig.json.

--- a/.algokit.toml
+++ b/.algokit.toml
@@ -29,7 +29,7 @@ environment_secrets = [
 
 [project.run]
 # Commands intended for use locally and in CI
-build = { commands = [
+algobuild = { commands = [
   'pnpm algobuild',
 ], description = 'Build all smart contracts in the project' }
 audit-teal = { commands = [
