--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
-    "algobuild": "algokit compile ts smart_contracts --output-source-map --out-dir artifacts && algokit generate client smart_contracts/artifacts --output {app_spec_dir}/{contract_name}Client.ts",
+    "algobuild": "mv node_modules/@types/react node_modules/@types/react.bak 2>/dev/null || true && mv node_modules/@types/react-dom node_modules/@types/react-dom.bak 2>/dev/null || true && algokit compile ts smart_contracts --output-source-map --out-dir artifacts && algokit generate client smart_contracts/artifacts --output {app_spec_dir}/{contract_name}Client.ts && mv node_modules/@types/react.bak node_modules/@types/react 2>/dev/null || true && mv node_modules/@types/react-dom.bak node_modules/@types/react-dom 2>/dev/null || true",
     "deploy": "ts-node-dev --transpile-only --watch .env -r dotenv/config smart_contracts/index.ts",
     "deploy:ci": "ts-node --transpile-only -r dotenv/config smart_contracts/index.ts",
     "check-types": "tsc --noEmit"
@@ -50,12 +50,12 @@
     "@rollup/plugin-typescript": "^12.1.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "dotenv": "^17.2.1",
     "tailwindcss": "^4",
     "ts-node-dev": "^2.0.0",
     "tw-animate-css": "^1.3.7",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
