--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "algobuild": "pnpm rm @types/react-dom && algokit compile ts smart_contracts --output-source-map --out-dir artifacts && algokit generate client smart_contracts/artifacts --output {app_spec_dir}/{contract_name}Client.ts && pnpm add -D @types/react-dom",
     "deploy": "ts-node-dev --transpile-only --watch .env -r dotenv/config smart_contracts/index.ts",
     "deploy:ci": "ts-node --transpile-only -r dotenv/config smart_contracts/index.ts",
+    "generate:app-clients": "algokit generate client smart_contracts/artifacts/hello_world --output components/HelloWorldClient.ts --language typescript",
+    "generate:all-clients": "for d in smart_contracts/artifacts/*; do if [ -d \"$d\" ]; then cname=$(basename \"$d\"); algokit generate client $d --output components/${cname}.ts --language typescript; fi; done",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
