--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "algobuild": "pnpm rm @types/react-dom && algokit compile ts smart_contracts --output-source-map --out-dir artifacts && algokit generate client smart_contracts/artifacts --output {app_spec_dir}/{contract_name}Client.ts && pnpm add -D @types/react-dom",
     "deploy": "ts-node-dev --transpile-only --watch .env -r dotenv/config smart_contracts/index.ts",
     "deploy:ci": "ts-node --transpile-only -r dotenv/config smart_contracts/index.ts",
-    "generate:clients": "for d in smart_contracts/artifacts/*; do if [ -d \"$d\" ]; then cname=$(basename \"$d\"); algokit generate client $d --output components/${cname}.ts --language typescript; fi; done",
+    "generate:clients": "for d in smart_contracts/artifacts/*; do if [ -d \"$d\" ]; then cname=$(basename \"$d\"); algokit generate client $d --output contracts/${cname}.ts --language typescript; fi; done",
     "generate": "pnpm algobuild && pnpm generate:clients",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@agoralabs-sh/avm-web-provider": "^1.7.0",
     "@algorandfoundation/algokit-utils": "^9.1.2",
     "@algorandfoundation/algorand-typescript": "1.0.0-beta.72",
     "@blockshake/defly-connect": "^1.2.1",
     "@hookform/resolvers": "^5.2.1",
+    "@perawallet/connect": "^1.4.2",
     "@txnlab/use-wallet-react": "^4.3.1",
+    "@walletconnect/modal": "^2.7.0",
     "algosdk": "^3.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -54,7 +57,9 @@
     "@types/node": "^20.19.11",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@walletconnect/sign-client": "^2.21.8",
     "dotenv": "^17.2.1",
+    "lute-connect": "^1.6.2",
     "tailwindcss": "^4.1.12",
     "ts-node-dev": "^2.0.0",
     "tw-animate-css": "^1.3.7",
